# VulkanEngine

./: CMakeLists.txt  README.md
data/shaders/mesh/: generate-spirv.bat  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  mesh_no_light.frag.spv
src/: cnn.cpp  vkre.cpp
src/base/: VkreBase.cpp  VkreBase.h  VulkanDebug.cpp  VulkanDebug.h  VulkanModel.hpp  VulkanSwapChain.hpp  VulkanTexture.hpp  VulkanTools.cpp  VulkanTools.h  VulkanUIOverlay.cpp  VulkanUIOverlay.h  benchmark.hpp  keycodes.hpp
